Fixed overflow pic width

--- a/components/post/BelowTheFold.module.css
+++ b/components/post/BelowTheFold.module.css
@@ -1,5 +1,7 @@
 .container {
-  position: relative
+  position: relative;
+  width: 100%;
+  max-width: 1825px;
 }
 .preview {
   height: 200px;
